# salesforce-agent

./: .env.example  .gitignore  README.md  deploy.py  justfile  main.py  pyproject.toml
salesforce_adk/: __init__.py  agent.py  auth.py  operations.py  toolset.py
salesforce_agent/: __init__.py  operations.py  toolset.py
